--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="class-text"><p>Number 1 - I'm a class!</p></div>
+    <p class="class-text">Number 1 - I'm a class!</p>
     <div id="id1">Number 2 - I'm one ID.</div>
-    <div class="class-cooler"><p>Number 3 - I'm a class, but cooler!</p></div>
+    <p class="class-cooler">Number 3 - I'm a class, but cooler!</p>
     <div id="id2">Number 4 - I'm another ID.</div>
     <div class="class-text"><p>Number 5 - I'm a class!</p></div>
   </body>
